Increased navbar button size on mobiles. Fixed policy width issue

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -10,7 +10,7 @@
 
 .meetingBtn {
     border-radius: 50px;
-    min-width: 100px;
+    min-width: 125px;
     min-height: 40px;
     background-color: transparent;
     border: 1px solid white;
